feat(util): add OSVersionUtil for precise Windows version detection
- Use JNA to call ntdll!RtlGetVersion for accurate build number retrieval
- Fallback to System.getProperty("os.version") on non-Windows or API failure
- Add isWindowsVersionAtLeast() for minimum version requirement checks
- This avoids GetVersionEx manifest-based shims that lie on Windows 8.1+

getExactVersion now returns the real build number (e.g., 10.0.19047) instead of a shimmed value.

Signed-off-by: Kagurazaka-Nana <nightsky_chaser@outlook.com>